compiler/lume_typech/src/tests/snapshots/lume_typech__tests__query__query_check_method_arg_type.snap
---
source: compiler/lume_typech/src/tests/query.rs
---
× error[LM4001]: mismatched types
   ╭───────────
 1 │ A::foo(false);
   │        ^^^^^^ expected type Int32, but found type Boolean...
   ∶ 
   ╰──
   help: expected type Int32
            found type Boolean
