compiler/lume_typech/src/tests/snapshots/lume_typech__tests__query__query_function_check_arg_type.snap
---
source: compiler/lume_typech/src/tests/query.rs
---
× error[LM4001]: mismatched types
   ╭───────────
 1 │ foo(false);
   │     ^^^^^ expected type Int32, but found type Boolean...
   ∶ 
 1 │ foo(false);
   │           ^ ...because of type defined here
   ╰──
   help: expected type Int32
            found type Boolean
