compiler/lume_typech/src/tests/snapshots/lume_typech__tests__query__query_function_check_arg_type_second.snap
---
source: compiler/lume_typech/src/tests/query.rs
---
× error[LM4001]: mismatched types
   ╭───────────
 1 │ foo(false, false);
   │            ^^^^^ expected type Int32, but found type Boolean...
   ∶ 
   ╰──
   help: expected type Int32
            found type Boolean
