compiler/lume_typech/src/tests/snapshots/lume_typech__tests__query__query_lookup_functions_suggestion_arg_mismatch.snap
---
source: compiler/lume_typech/src/tests/query.rs
expression: err
---
MissingFunction {
    source: <internal>:0:0,
    function_name: Identifier {
        name: "foo",
        location: <internal>:0:0,
    },
    suggestions: [
        SuggestedFunction {
            source: <internal>:3:6,
            function_name: Type {
                name: Identifier {
                    name: "foo",
                    location: <internal>:3:6,
                },
                type_arguments: [],
                location: <internal>:3:6,
            },
            reason: ArgumentTypeMismatch(
                0,
            ),
        },
    ],
}
